--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve:eleventy": "ELEVENTY_ENV=development eleventy --serve",
     "serve": "npm-run-all clean --parallel serve:*",
     "build:webpack": "webpack --mode production",
-    "build:eleventy": "ELEVENTY_ENV=production eleventy",
+    "build:eleventy": "ELEVENTY_ENV=production eleventy --pathprefix 'blog-11'",
     "build": "NODE_ENV=production run-s clean build:*"
   },
   "keywords": [],
